# olibuguard

./: .dockerignore  .env.binance-testnet.example  .env.bybit.example  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  config.example.yaml  docker-compose.yml  pyproject.toml
.skills/: backtesting_specialist.md  language_standards.md  security_devops.md  senior_python_dev.md  trading_guardrails.md
docs/: architecture.md  design.md  diseno.md  operations.md  overview.md  roadmap.md
olibuguard/: __init__.py  __main__.py  cli.py  config.py  failsafe.py  kill_switch.py  logging.py  modes.py  orchestrator.py  reconciliation.py  secrets.py
olibuguard/advisor/: __init__.py  base.py  bedrock.py
olibuguard/alerts/: __init__.py  sink.py  telegram.py
olibuguard/audit/: __init__.py  records.py  sink.py  sqlite.py  version.py
olibuguard/domain/: __init__.py  models.py  ports.py
olibuguard/risk/: __init__.py  gate.py
scripts/: patch_freqtrade_binance_testnet.py
tests/: test_advisor.py  test_alerts.py  test_audit.py  test_cli_modes.py  test_config.py  test_failsafe.py  test_kill_switch.py  test_orchestrator.py  test_reconciliation.py  test_risk_gate.py
user_data/: config.binance-testnet.json  config.binance-testnet.yaml  config.bybit-demo.json  config.json
user_data/strategies/: OlibuguardStrategy.json  OlibuguardStrategy.py
