[project]
name = "olibuguard"
version = "0.1.0"
description = "Bot de trading cripto, seguridad y guardarraíles primero. Fase 0 (esqueleto)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Oliv" }]

# Núcleo: solo lo necesario para arrancar, leer config, loggear y pasar el risk gate.
# El stack pesado (exchange, datos, persistencia, IA) va en extras para que el core
# instale limpio en cualquier máquina sin librerías de sistema (p.ej. TA-Lib).
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "rich>=13.7",
    "keyring>=25.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Camino A: Freqtrade como runner (trae ccxt/pandas/numpy/ta-lib transitivamente).
# El núcleo olibuguard.* NO importa freqtrade; solo el adaptador OlibuguardStrategy.
freqtrade = ["freqtrade>=2026.4"]
# Acceso a exchanges y análisis de datos (Fase 1-2).
exchange = ["ccxt>=4.5", "pandas>=2.2", "numpy>=1.26"]
# Persistencia (Fase 2).
db = ["SQLAlchemy>=2.0", "alembic>=1.13"]
# Análisis técnico (requiere la librería de sistema ta-lib instalada aparte).
ta = ["TA-Lib>=0.4.32"]
# IA opcional (Fase 3). boto3 SOLO se instala si se pide explícitamente.
ai = ["boto3>=1.34"]

[project.scripts]
olibuguard = "olibuguard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olibuguard"]

# ----------------------------------------------------------------------------
# Tipado: mypy --strict es el contrato. Nada de Any implícito en el dominio.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]
plugins = ["pydantic.mypy"]
files = ["olibuguard", "tests"]
# El adaptador de Freqtrade (user_data/) hereda de tipos no estrictos del framework.
exclude = ["user_data/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ----------------------------------------------------------------------------
# Lint + formato
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
# El adaptador de Freqtrade vive en user_data/ con firmas impuestas por el framework.
extend-exclude = ["user_data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "PTH", "TID"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
