[project]
name = "olibuguard"
version = "0.1.0"
description = "Personal crypto trading bot — security and guardrails first."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Oliv" }]

# Core: only what is needed to start, load config, log, and pass the risk gate.
# The heavy stack (exchange, data, persistence, AI) lives in extras so the core
# installs cleanly on any machine without system libraries (e.g. TA-Lib).
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "rich>=13.7",
    "keyring>=25.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Path A: Freqtrade as runner (brings ccxt/pandas/numpy/ta-lib transitively).
# The olibuguard.* core does NOT import freqtrade; only OlibuguardStrategy does.
freqtrade = ["freqtrade>=2026.4"]
# Exchange access and data analysis (Phase 1-2).
exchange = ["ccxt>=4.5", "pandas>=2.2", "numpy>=1.26"]
# Persistence (Phase 2).
db = ["SQLAlchemy>=2.0", "alembic>=1.13"]
# Technical analysis (requires the ta-lib system library installed separately).
ta = ["TA-Lib>=0.4.32"]
# Optional AI (Phase 3). boto3 is ONLY installed when explicitly requested.
ai = ["boto3>=1.34"]

[project.scripts]
olibuguard = "olibuguard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olibuguard"]

# ----------------------------------------------------------------------------
# Tipado: mypy --strict es el contrato. Nada de Any implícito en el dominio.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]
plugins = ["pydantic.mypy"]
files = ["olibuguard", "tests"]
# The Freqtrade adapter (user_data/) inherits from the framework's non-strict types.
exclude = ["user_data/"]

[[tool.mypy.overrides]]
# boto3 ships without inline type stubs; suppress the missing-import error.
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ----------------------------------------------------------------------------
# Lint + formato
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
# The Freqtrade adapter lives in user_data/ with signatures imposed by the framework.
extend-exclude = ["user_data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "PTH", "TID"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
